--- a/admin/src/app.styles.scss
+++ b/admin/src/app.styles.scss
@@ -33,9 +33,11 @@ a {
 .form-wrapper{
     width: 540px;
     max-width: 100%;
-    margin: 0 auto;
+    
+    margin: 1rem auto;
     .input-group {
         margin-bottom: 1rem;
+
     }
     label{
         display: block;
@@ -48,6 +50,18 @@ a {
         text-indent: 10px;
         font-size: 1rem;
     }
+    textarea{
+        display: block;
+        width: 100%;
+        padding: 0.5rem 0rem;
+        text-indent: 10px;
+        font-size: 1rem;
+        height: 4.4rem;
+        padding: 0.6rem 0.5rem;
+
+    }
+    
+   
     button{
         display: block;
         width: 100%;
