--- a/admin/src/components/Header/header.style.scss
+++ b/admin/src/components/Header/header.style.scss
@@ -1,6 +1,6 @@
 
 *{
-    font-family: sans-serif
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 .main-header{
     background-color: rgba(17, 68, 68, 0.308);
