--- a/admin/src/pages/Room/room.style.scss
+++ b/admin/src/pages/Room/room.style.scss
@@ -1,24 +1,26 @@
 #room{
-    img{
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-    }
+   
     .img-wrapper{
         width: 100%;
-        height: 50vh;
+        height: 60vh;
         margin-bottom: 1rem;
     }
     .heading{
         text-transform: capitalize;
+        color: rgb(0, 0, 0);
+        
+
     }
     
     p{
         font-size: 1.2rem;
         margin-bottom: 1rem;
+        color: rgb(0, 0, 0);
+
     }
     h2{
         margin-bottom: 1rem;
+        color: rgb(1, 1, 1);
     }
     .text-wrapper{
         text-align: center;
@@ -34,9 +36,9 @@
     .cta-wrapper{
         margin-top: 1rem;
         padding-bottom: 2rem;
-display: flex;
-  justify-content: center;
-  gap: 1rem; // عشان في مسافة بين الزرين
+        display: flex;
+        justify-content: center;
+        gap: 1rem; // عشان في مسافة بين الزرين
        a {
         display: inline-block;
         padding: 1rem 1rem;
@@ -70,4 +72,9 @@ display: flex;
         height: 30vh;
     }
     }
+     @media (min-width:200px) and (max-width:800px){
+        .heading, h2, p{
+            color: rgb(231, 17, 53);
+        }
+     }
 }
